--- a/myorder.html
+++ b/myorder.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/myorder.css">
     <script src="./js/rem.js"></script>
-    <title>历史订单</title>
+    <title>新富会</title>
 </head>
 
 <body>
