--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>登录</title>
+    <title>新富会</title>
     <script src="js/jquery-2.1.4.js"></script>
     <script src="js/rem.js"></script>
     <link rel="stylesheet" href="css/common.css">
