--- a/service.html
+++ b/service.html
@@ -88,6 +88,12 @@
                     <a href="javascript:;">
                         <img src="img/pic.png" alt="">
                     </a>
+                    <a href="javascript:;">
+                        <img src="img/pic_j.png" alt="">
+                    </a>
+                    <a href="javascript:;">
+                        <img src="img/pic_k.png" alt="">
+                    </a>
                 </div>
             </div>
             <div id="child">
